@@ -102,16 +102,7 @@ public class ConsoleClient implements Runnable, ActionListener {
 	/* called when the associated tab is closed */
 	public void actionPerformed(ActionEvent ev) {
 		if (destroyCommand != null) {
-			new Thread(new Runnable() {
-				public void run() {
-					try {
-						connection.execute(destroyCommand, new Object[] { session }); 
-					}
-					catch (Exception ex) {
-						ex.printStackTrace();
-					}
-				}
-			}).start();
+			((RpcAsync)connection).execute_async(destroyCommand, new Object[] { session });
 		}
 	}
 
